Updated Version to 1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.witcom</groupId>
   <artifactId>camunda-keycloak-validator</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>camunda-keycloak-validator</name>
   
   <properties>
